--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,7 +5,7 @@
 .masthead {
   position: sticky;
   top: 0;
-  background-color: #FFB414;
+  background-color: #FFB414;  // 蓝色背景
   border-bottom: 1px solid $border-color;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
@@ -29,6 +29,7 @@
 
     a {
       text-decoration: none;
+      color: #ffffff;  // 设置链接为白色
     }
   }
 }
@@ -40,6 +41,10 @@
     padding: 0;
     clear: both;
     list-style-type: none;
+  }
+
+  li a {  // 确保所有链接均为白色
+    color: #ffffff;
   }
 }
 
@@ -58,7 +63,6 @@
   &--lg {
     padding-right: 2em;
     font-weight: 700;
+    color: #ffffff;  // 为大字体菜单项设置白色字体
   }
 }
-
-
