--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,7 +5,7 @@
 .masthead {
   position: sticky;
   top: 0;
-  background-color: #FFB414;  // 蓝色背景
+  background-color: #FFB414;  // 黄色背景
   border-bottom: 1px solid $border-color;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
@@ -29,7 +29,7 @@
 
     a {
       text-decoration: none;
-      color: #ffffff;  // 设置链接为白色
+      color: #1B2631;  // 设置链接为白色
     }
   }
 }
@@ -44,7 +44,7 @@
   }
 
   li a {  // 确保所有链接均为白色
-    color: #ffffff;
+    color: #1B2631;
   }
 }
 
@@ -63,6 +63,6 @@
   &--lg {
     padding-right: 2em;
     font-weight: 700;
-    color: #ffffff;  // 为大字体菜单项设置白色字体
+    color: #1B2631;  // 为大字体菜单项设置白色字体
   }
 }
