--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -175,17 +175,39 @@
 .greedy-nav {
   position: relative;
   min-width: 250px;
-  background: #FFB414;
+  background: #FFB414; // 使用你之前设定的背景色
 
   a {
     display: block;
     margin: 0 1rem;
     padding: 0.5rem 0;
-    color: $masthead-link-color;
+    color: $masthead-link-color; // 默认颜色设置
     text-decoration: none;
 
     &:hover {
-      color: $masthead-link-color-hover;
+      color: #ffffff; // 悬停时文字颜色变为白色
+    }
+
+    &:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      height: 4px;
+      background: mix(#fff, $primary-color, 50%); // 调整为初始状态下颜色
+      width: 100%;
+      -webkit-transition: $global-transition;
+      transition: $global-transition;
+      -webkit-transform: scaleX(0);
+      -ms-transform: scaleX(0);
+      transform: scaleX(0); // 初始化时隐藏
+    }
+
+    &:hover:before {
+      background: #ffffff; // 悬停时下划线颜色变为白色
+      -webkit-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+      transform: scaleX(1); // 悬停时显示
     }
   }
 
