--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,14 @@ layout: compress
       </article>
     </div>
 
+   <div class="page__footer">
+      <footer>
+        {% include footer/custom.html %}
+        {% include footer.html %}
+      </footer>
+    </div>
+    
     {% include scripts.html %}
     
-    {% include footer.html %}
-
   </body>
 </html>
