--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,22 @@
-<footer class="page__footer">
-  <div class="page__footer-content">
-    <ul class="page__footer-links">
-      <li><a href="/about">About Us</a></li>
-      <li><a href="/research">Research</a></li>
-      <li><a href="/publications">Publications</a></li>
-      <li><a href="/contact">Contact</a></li>
-    </ul>
-    <div class="page__footer-social">
-      <a href="https://twitter.com/yourhandle" class="fab fa-twitter"></a>
-      <a href="https://facebook.com/yourpage" class="fab fa-facebook-f"></a>
-      <a href="https://linkedin.com/in/yourprofile" class="fab fa-linkedin-in"></a>
-    </div>
-    <p>© 2024 Your University or Research Group. All rights reserved.</p>
-  </div>
-</footer>
+{% include base_path %}
+
+{% if site.author.github or site.author.bitbucket or site.atom_feed.hide != true %}
+<div class="page__footer-follow">
+  <ul class="social-icons">
+    {% if site.data.ui-text[site.locale].follow_label %}
+      <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
+    {% endif %}
+    {% if site.author.github %}
+      <li><a href="http://github.com/{{ site.author.github }}"><i class="fab fa-github" aria-hidden="true"></i> GitHub</a></li>
+    {% endif %}
+    {% if site.author.bitbucket %}
+      <li><a href="http://bitbucket.org/{{ site.author.bitbucket }}"><i class="fab fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
+    {% endif %}
+    {% if site.atom_feed.hide != true %}
+    <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}"><i class="fa fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
+    {% endif %}
+  </ul>
+</div>
+{% endif %}
+
+<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/RayeRen/acad-homepage.github.io">AcadHomepage</a>.</div>
