--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -4,97 +4,41 @@
 
 .page__footer {
   @include clearfix;
-  float: left;
-  margin-left: 0;
-  margin-right: 0;
   width: 100%;
   clear: both;
-  /* sticky footer fix start */
-  position: absolute;
-  bottom: 0em;
-  height: auto;
-  /* sticky footer fix end */
-  margin-top: 3em;
+  margin-top: 3em;  // 确保 footer 下面有足够的间隔
   color: mix(#fff, $gray, 25%);
-  -webkit-animation: intro 0.3s both;
-          animation: intro 0.3s both;
-  -webkit-animation-delay: 0.45s;
-          animation-delay: 0.45s;
   background-color: $lighter-gray;
   border-top: 1px solid $light-gray;
-
-  footer {
-    @include clearfix;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2em;
-    max-width: 100%;
-    padding: 0 1em 2em;
-
-    @include breakpoint($x-large) {
-      max-width: $x-large;
-    }
-  }
+  padding: 2em 1em;  // 统一 padding 设置
 
   a {
     color: inherit;
     text-decoration: none;
-
     &:hover {
       text-decoration: underline;
     }
   }
 
-  .fas,
-  .fab,
-  .far,
-  .fal {
+  .fas, .fab, .far, .fal {
     color: mix(#fff, $gray, 25%);
   }
 }
 
-.page__footer-copyright {
-  font-family: $global-font-family;
-  font-size: $type-size-7;
+.page__footer-content {
+  text-align: center;
+  font-size: $type-size-6;
 }
 
-.page__footer-follow {
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-  }
-
-  li {
-    display: inline-block;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    font-family: $sans-serif-narrow;
-    font-size: $type-size-6;
-    text-transform: uppercase;
-  }
-
-  li + li:before {
-    content: "";
-    padding-right: 5px;
-  }
-
-  a {
-    padding-right: 10px;
-    font-weight: bold;
-  }
-
-  .social-icons {
-    a {
-      white-space: nowrap;
-    }
-  }
+.page__footer-links {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
-
-
-
-
-
-
-
+.page__footer-social {
+  text-align: center;
+  margin-top: 1em;
+}
