--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -120,9 +120,9 @@
 }
 
 .author__name {
-   margin: 0;
-   margin-bottom: 1rem; // 添加下边距
-}
+  @include breakpoint($large) {
+    line-height: 1.8; // 增加行高
+  }
 
 .sidebar .author__name {
   @include breakpoint($medium) {
