--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -7,13 +7,13 @@
   width: 100%;
   clear: both;
   margin-top: 3em;  // 确保 footer 下面有足够的间隔
-  color: mix(#fff, $gray, 25%);
-  background-color: $lighter-gray;
-  border-top: 1px solid $light-gray;
+  color: #fff;  // 将文字颜色改为纯白色
+  background-color: #000;  // 将背景颜色改为黑色
+  border-top: 1px solid darken(#000, 5%);  // 深黑色边框
   padding: 2em 1em;  // 统一 padding 设置
 
   a {
-    color: inherit;
+    color: inherit;  // 保持链接继承白色文字
     text-decoration: none;
     &:hover {
       text-decoration: underline;
@@ -21,7 +21,7 @@
   }
 
   .fas, .fab, .far, .fal {
-    color: mix(#fff, $gray, 25%);
+    color: #fff;  // 图标颜色改为白色
   }
 }
 
