--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -110,7 +110,7 @@
         <li><a href="{{ author.googlescholar }}"><i class="fas fa-fw fa-graduation-cap"></i> Google Scholar</a></li>
       {% endif %}
       {% if author.wos %}
-        <li><a href="{{ author.wos }}"><i class="ai ai-webofscience ai-fw"></i> Web of Science</a></li>
+        <li><a href="{{ author.wos }}"><i class="ai ai-researcherid ai-fw"></i> Web of Science</a></li>
       {% endif %}
       {% if author.orcid %}
         <li><a href="{{ author.orcid }}"><i class="ai ai-orcid-square ai-fw"></i> ORCID</a></li>
