--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -107,7 +107,7 @@
         <li><a href="https://vine.co/u/{{ author.vine }}"><i class="fab fa-fw fa-vine" aria-hidden="true"></i> Vine</a></li>
       {% endif %}
       {% if author.googlescholar %}
-        <li><a href="{{ author.googlescholar }}"><i class="fas fa-fw fa-graduation-cap"></i> Google Scholar</a></li>
+        <li><a href="{{ author.googlescholar }}"><i class="ai ai-google-scholar-square ai-fw"></i> Google Scholar</a></li>
       {% endif %}
       {% if author.wos %}
         <li><a href="{{ author.wos }}"><i class="ai ai-clarivate-square ai-fw"></i> Web of Science</a></li>
